Fixed Employees overflow

--- a/client/src/components/Employees/EachEmployee.css
+++ b/client/src/components/Employees/EachEmployee.css
@@ -10,6 +10,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 2%;
   margin-top: 2%;
+  overflow: scroll;
 }
 .holder {
   background:#C4C4C4;
